fixed some bugs, fixed hat pages

--- a/client/autoform.html
+++ b/client/autoform.html
@@ -8,7 +8,7 @@
         {{afFieldLabelText name=this.atts.name}}
     </div>
     {{#if afFieldIsInvalid name=this.atts.name}}
-    <div class="card-body has-error">
+    <div class="card-body is-invalid">
       <span class="form-text">{{{afFieldMessage name=this.atts.name}}}</span>
     </div>
     {{/if}}
