--- a/imports/client/tournaments/tournament.html
+++ b/imports/client/tournaments/tournament.html
@@ -56,7 +56,7 @@
                             </div>
                         </fieldset>
                     </div>
-                    <div class="modal-footer d-none d-sm-block">
+                    <div class="modal-footer d-none d-sm-flex">
                         <button type="submit" class="btn btn-primary">Speichern</button>
                     </div>
                 </div>
