--- a/imports/client/forms/address.html
+++ b/imports/client/forms/address.html
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-12 col-sm-6 col-md-5 col-lg-4">
             <div class="form-horizontal">
-                <div class="form-group {{#if afFieldIsInvalid name='address.country'}}has-error{{/if}}" data-required="true">
+                <div class="form-group {{#if afFieldIsInvalid name='address.country'}}is-invalid{{/if}}" data-required="true">
                     <label class="col-form-label col-12 col-lg-3">{{afFieldLabelText name="address.country"}}</label>
                     <div class="col-lg-9 col-12 dropdown-country dropdown">
                         <div class="input-group" data-toggle="dropdown">
@@ -22,7 +22,7 @@
                         {{> afFieldInput name="address.country" type="hidden"}}
                     </div>
                 </div>
-                <div class="form-group {{#if afFieldIsInvalid name='address.city'}}has-error{{/if}}" data-required="true">
+                <div class="form-group {{#if afFieldIsInvalid name='address.city'}}is-invalid{{/if}}" data-required="true">
                     <label class="col-form-label col-12 col-lg-3">{{afFieldLabelText name="address.city"}}</label>
                     <div class="col-lg-9 col-12 dropdown-city dropdown">
                         <div class="input-group" data-toggle="dropdown">
@@ -39,13 +39,13 @@
                         </ul>
                     </div>
                 </div>
-                <div class="form-group {{#if afFieldIsInvalid name='address.postcode'}}has-error{{/if}}" data-required="false">
+                <div class="form-group {{#if afFieldIsInvalid name='address.postcode'}}is-invalid{{/if}}" data-required="false">
                     <label class="col-form-label col-6 col-lg-3">{{afFieldLabelText name="address.postcode"}}</label>
                     <div class="col-12 col-lg-6">
                     {{> afFieldInput name="address.postcode" size="5" class="form-control" }}
                     </div>
                 </div>
-                <div class="form-group {{#if afFieldIsInvalid name='address.street'}}has-error{{/if}}" data-required="false">
+                <div class="form-group {{#if afFieldIsInvalid name='address.street'}}is-invalid{{/if}}" data-required="false">
                     <label class="col-form-label col-6 col-lg-3">{{afFieldLabelText name="address.street"}}</label>
                     <div class="col-12 col-lg-9 dropdown-street dropdown">
                         <div class="input-group" data-toggle="dropdown">
