--- a/packages/hatinfo/client/hat.html
+++ b/packages/hatinfo/client/hat.html
@@ -88,7 +88,7 @@
                         {{>hatParticipant}}
                     {{else}}
                     <li class="list-group-item">
-                        {{>Empty text="Keine Teilnehmer"}}
+                        {{>EmptySmall text="Keine Teilnehmer"}}
                     </li>
                     {{/each}}
                 </ul>
@@ -102,11 +102,6 @@
                     {{/if}}
                     <h5>
                         Warteliste <span class="badge">{{hatWaiting.count}}</span>
-                        {{#if isInRole "admin,hatAdmin"}}
-                        <small>
-                            Bezahlt: {{payedWaiting}}
-                        </small>
-                        {{/if}}
                     </h5>
                 </div>
                 <ul class="list-group">
@@ -115,6 +110,22 @@
                     {{else}}
                     <li class="list-group-item">
                         {{>EmptySmall text="Leere Warteliste"}}
+                    </li>
+                    {{/each}}
+                </ul>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <h5>
+                        Nicht bestätigt und nicht bezahlt <span class="badge">{{hatNotPaid.count}}</span>
+                    </h5>
+                </div>
+                <ul class="list-group">
+                    {{#each hatNotPaid}}
+                        {{>hatParticipant}}
+                    {{else}}
+                    <li class="list-group-item">
+                        {{>EmptySmall text="Leere Liste"}}
                     </li>
                     {{/each}}
                 </ul>
@@ -130,20 +141,29 @@
 <template name="hatParticipant">
     <a class="list-group-item {{#if activeEntry}}selected{{/if}}">
         <div class="row">
-            <strong class="col-6 col-sm-8 col-md-9 {{#if isInRole "admin,hatAdmin"}}participant-entry{{/if}}">
+            <strong class="col-6 col-sm-6 col-md-8 {{#if isInRole "admin,hatAdmin"}}participant-entry{{/if}}">
                 <span class="fa fa-envelope-o {{#if confirmed}}text-success{{else}}text-muted{{/if}}"></span>
                 <span class="fa fa-money {{#if hasPayed}}text-success{{else}}text-muted{{/if}}"></span>
+                {{#if isInRole "admin,hatAdmin"}}
+                    <span class="fa fa-eye {{#if allowPublic}}text-success{{else}}text-muted{{/if}}"></span>
+                {{/if}}
                 {{#if this.name}}
                     {{name}}
                     <small> aus {{city}} - {{hometeam}}</small>
                 {{else}}
-                    Irgendjemand
+                    {{#if public.name}}
+                        {{public.name}}
+                        <small> aus {{public.city}} - {{public.hometeam}}</small>
+                    {{else}}
+                        Irgendjemand
+                    {{/if}}
                 {{/if}}
             </strong>
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-6 col-md-4">
                 <div class="progress text-center">
                     <div class="progress-bar bg-info" role="progressbar" style="width:{{strengthPercent}}%">{{strength}}</div>
                 </div>
+                <div >{{years}} Spieljahre</div>
             </div>
             {{#if activeEntry}}
             <div class="col-12 col-sm-6">
@@ -235,9 +255,6 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span class="fa fa-close"></span>
-                    </button>
                     <h5 class="modal-title" id="myModalLabel">
                         {{#if existing._id}}
                         Eintragung ändern
@@ -245,25 +262,35 @@
                         Für das {{settings.hatName}} eintragen
                         {{/if}}
                     </h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span class="fa fa-close"></span>
+                    </button>
                 </div>
                 {{#autoForm schema=schema doc=existing id="hatParticipantForm" meteormethod=method type="method"}}
                 <div class="modal-body">
+                    Die eingetragenen Daten stehen nur den Ausrichtern zur Verfügung, es sei den,
+                    das Häkchen bei der Ausnahme ist gesetzt.<br/>
+                    Stärke und Spieljahre sind notwendig, um die Teams zusammenzustellen, Stadt und Heimatteam, um eine
+                    Durchmischung zu ermöglichen. Die E-Mail Adresse wird benötigt, um mit euch Kontakt aufzunehmen.<br/>
+                    Die Daten werden automatisch nach 60 Tagen gelöscht, solltet ihr noch Fragen zum Datenschutz haben, 
+                    schreibt uns eine Mail an <a href="mailto:kontakt@hallunken.de">kontakt@hallunken.de</a>
+                    <hr/>
                     {{#if isInRole "admin,hatAdmin"}}
                         {{> afQuickFields}}
                     {{else}}
                         {{#if existing._id}}
-                            {{> afQuickFields fields="name,city,hometeam,strength"}}
+                            {{> afQuickFields fields="name,city,hometeam,strength,years,allowPublic"}}
                             <fieldset disabled>
-                                {{> afQuickFields omitFields="name,city,hometeam,strength"}}
+                                {{> afQuickFields omitFields="name,city,hometeam,strength,years,allowPublic"}}
                             </fieldset>
                         {{else}}
-                            {{> afQuickFields fields="name,email,city,hometeam,strength" }}
+                            {{> afQuickFields fields="name,email,city,hometeam,strength,years,allowPublic" }}
                         {{/if}}
                     {{/if}}
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" class="btn btn-primary">{{#if existing._id}}Ändern{{else}}Eintragen{{/if}}</button>
                     <button type="button" data-dismiss="modal" aria-label="Close" class="btn btn-light">Abbrechen</button>
+                    <button type="submit" class="btn btn-primary">{{#if existing._id}}Ändern{{else}}Eintragen{{/if}}</button>
                 </div>
                 {{/autoForm}}
             </div>
