--- a/packages/autoform/client/forms.html
+++ b/packages/autoform/client/forms.html
@@ -22,7 +22,7 @@
                     {{>afArrayField this}}
                 {{else}}
                     <div class="form-group" title="{{this.name}}">
-                        {{#unless or noLabel (equals autoform.type "hidden")}}
+                        {{#unless hasNoLabel}}
                             <label class="col-form-label">{{this.label}}</label>
                         {{/unless}}
                         {{>afFieldInput this}}
@@ -67,20 +67,31 @@
                         </select> 
                     {{/if}}
                 {{else}}
-                    {{#if isDate}}
-                        <div class="input-group">
-                          <input name="{{name}}" class="form-control {{validity}}" value="{{getFieldValue}}" autocomplete="{{autocomplete}}" placeholder="{{placeholder}}" />
-                          <span class="input-group-btn">
-                            <button class="btn btn-light dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              <span class="fa fa-calendar"></span>
-                            </button>
-                            <div class="dropdown-menu dropdown-menu-right">
-                              {{>autoformCalendar}}
-                            </div>
+                    {{#if isBoolean}}
+                        <div class="{{validity}}">
+                            <span class="autoform-checkbox boolean" > 
+                                <span class="fa fa-{{#if isChecked}}check-{{/if}}square-o fa-fw"></span>
+                                <label class="col-form-label">
+                                    {{this.label}}
+                                </label>
                             </span>
                         </div>
                     {{else}}
-                        <input name="{{name}}" type="{{type}}" class="form-control {{validity}}" value="{{getFieldValue}}" autocomplete="{{autocomplete}}" placeholder="{{placeholder}}" />
+                        {{#if isDate}}
+                            <div class="input-group">
+                            <input name="{{name}}" class="form-control {{validity}}" value="{{getFieldValue}}" autocomplete="{{autocomplete}}" placeholder="{{placeholder}}" />
+                            <span class="input-group-btn">
+                                <button class="btn btn-light dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <span class="fa fa-calendar"></span>
+                                </button>
+                                <div class="dropdown-menu dropdown-menu-right">
+                                {{>autoformCalendar}}
+                                </div>
+                                </span>
+                            </div>
+                        {{else}}
+                            <input name="{{name}}" type="{{type}}" class="form-control {{validity}}" value="{{getFieldValue}}" autocomplete="{{autocomplete}}" placeholder="{{placeholder}}" />
+                        {{/if}}
                     {{/if}}
                 {{/if}}
             {{/if}}
