--- a/private/mail-templates/static-layout.html
+++ b/private/mail-templates/static-layout.html
@@ -1,9 +1,9 @@
 <div id="serverRendered" 
-  style="position: absolute;z-index:10000"
+  style="position: absolute;top:0px;z-index:10000"
   class="ultisite-{{settings.design}} base-layout {{#if settings.imageTitleImage}}with-title-image{{/if}}">
   <nav class="navbar navbar-light navbar-fixed-top">
     {{#if settings.imageTitleImage}}
-      <div class="title-image d-none d-sm-block" style="height:{{settings.titleImageHeight}}px">
+      <div class="title-image d-none d-md-block" style="height:{{settings.titleImageHeight}}px">
         <div style="background-image:url('/_image?imageId={{settings.imageTitleImage}}&size=80')"> </div>
         <img src="/_image?imageId={{settings.imageLogo}}" />
       </div>
@@ -19,7 +19,7 @@
   <div class="container-fluid page-content">
     <div class="container-fluid">
       <div class="row">
-        <div class="offset-lg-1 col-lg-6 col-md-7 col-sm-6 col-12 start-content">
+        <div class="offset-lg-1 col-lg-6 col-md-7 col-12 start-content">
           <div class="wikipage">
             <div class="page-details">
               <span class="">
@@ -31,7 +31,7 @@
             </div>  
           </div>
         </div>
-        <div class="col-lg-4 col-md-5 col-sm-6 col-12 start-content">
+        <div class="col-lg-4 col-md-5 col-12 start-content">
           <div class="card">
             <div class="card-header">&nbsp;</div>
             <div class="card-body" style="height:400px">&nbsp;</div>
@@ -41,8 +41,13 @@
     </div>
   </div>
   <nav class="d-none d-sm-block navbar navbar-light navbar-footer">
-    <div class="container-fluid">
-      &nbsp;
-    </div>
-  </nav>
+    <div class="pull-right">
+      <a href="#">Impressum</a>
+      &nbsp;&nbsp;
+      <a href="/wikipage/#">Datenschutz</a>
+  	</div>
+    <a href="https://github.com/larswolter/ultisite" target="github">
+      <span class="fa fa-github"></span> Quellen und Feedback
+    </a>
+  </nav>  
 </div>
