fixed some team bugs and historic view

--- a/imports/client/user/userlist.html
+++ b/imports/client/user/userlist.html
@@ -19,7 +19,7 @@
           </button>
         </div>
         <div class="d-none d-sm-block user-list-item">
-          <div class="row user-list-item">
+          <div class="row user-list-item user-list-header">
             <div class="col-12 col-sm-1">
               Bild
               <span class="fa fa-sort" data-sort="profile.avatar"></span>
